Refactor tables: Eliminate slot IDs
